<resources>
    <!-- Common -->
    <string name="app_name_cn">神奇的棋</string>
    <string name="app_name_en">magic_chess</string>
    <string name="error">发生错误，请稍后再试。</string>
    <string name="success">成功</string>
    <string name="input_account">首先，填写手机号。</string>
    <string name="input_password">然后，填写16位密码。</string>
    <string name="exit_app">退出游戏吗？</string>
    <string name="dialog_title">提示</string>
    <string name="account_invalid">账户无效，请重新输入</string>
    <string name="account_invalid_password">密码须为16位数字、字母或符号</string>
    <string name="account_not_found">账户未注册</string>
    <string name="account_error_password">账户与密码不一致</string>

    <!-- 网络 -->
    <string name="net_no_usable">请打开网络连接</string>
    <string name="net_can_not_connect_server">连接服务器失败，请稍后尝试</string>
    <string name="net_reconnect">重新连接中</string>


    <!-- LoginFragment -->
    <string name="login_btn_login">最后，点击登录。</string>
    <string name="login_logging">登录中</string>
    <string name="login_wrong_password">密码与账户不一致。</string>
    <string name="login_invalid_account">号码无效，请重新输入。</string>
    <string name="login_invalid_password">密码为16位数字、字母或符号。</string>


    <!-- RegisterActivity -->
    <string name="register_input_register">最后，注册账户。</string>
    <string name="register_dialog_title">注册提示</string>
    <string name="register_dialog_content">你还未注册，选择注册？</string>
    <string name="register_registered">你已经注册过了，可直接登录。</string>


    <!-- FriendActivity -->
    <string name="friend_friends_number">当前好友数量：0</string>


    <!-- NewRoleActivity -->
    <string name="new_role_input_name">输入昵称。</string>
    <string name="new_role_sex">选择性别。</string>
    <string name="new_role_head_img">选择一张你喜欢的头像。</string>
    <string name="new_role_null_name">角色名称不能为空</string>
    <string name="new_role_null_sex">请选择角色性别</string>


    <!-- GameActivity -->
    <string name="game_pk">PK</string>
    <string name="game_turn">该你了！</string>
    <string name="game_result_win">你胜利了</string>
    <string name="game_result_lose">你输了</string>
    <string name="game_result_exp">经验值</string>
    <string name="input_hint">请输入内容</string>
    <string name="sex_man">男</string>
    <string name="sex_woman">女</string>
    <string name="new_role_tag">你的签名。</string>
    <string name="news_category_recommend">推荐</string>
    <string name="news_category_attention">关注</string>
    <string name="news_category_other">其它</string>
    <string name="news_category_newest">最新</string>
    <string name="setting_group_person">个人</string>
    <string name="setting_person_account">账户详情</string>
    <string name="setting_person_alter_psd">更改密码</string>
    <string name="setting_group_version">版本</string>
    <string name="setting_version">游戏版本</string>
    <string name="setting_about_game">关于游戏</string>
    <string name="setting_version_detail">当前版本描述</string>
    <string name="setting_group_notification">消息通知</string>
    <string name="setting_notify_voice">声音提醒</string>
    <string name="setting_notify_voice_detail">来新消息时，提示会有声音。</string>
    <string name="setting_notify_verbose_detail">来新消息时，提示会有震动。</string>
    <string name="setting_notify_verbose">震动提醒</string>
    <string name="setting_group_security">账户安全</string>
    <string name="setting_security">查看安全状态</string>
    <string name="setting_alter_phone">更换手机号码</string>
    <string name="setting_psd_now">首先，输入当前密码。</string>
    <string name="password_now_error">当前密码错误，请重新输入。</string>
    <string name="password_new_hint">然后，输入新密码。</string>
    <string name="password_new_error">新密码格式错误。</string>
    <string name="password_alter">最后，点击修改。</string>
    <string name="password_alter_comfirm">确认修改</string>
    <string name="dialog_ok">确认</string>
    <string name="dialog_no">取消</string>
    <string name="hello_world">Hello World !!!</string>
    <string name="friend_category_all">所有</string>
    <string name="friend_category_group">分组</string>
    <string name="chat_no_history">没有任何聊天记录</string>
    <string name="loading">加载中...</string>
    <string name="setting_device">查看登录设备</string>
    <string name="setting_device_tip">最近一次登录：</string>
    <string name="user_info_signature">交友宣言</string>
    <string name="user_info_battle_record">对战记录</string>
    <string name="user_info_news">动态</string>
    <string name="user_info_edit">编辑资料</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_friend">添加好友</string>
    <string name="ta_info">TA的资料</string>
    <string name="cancel">取消操作</string>
    <string name="share_battle_record">分享战绩</string>
    <string name="func_not_support">功能调整，暂时关闭</string>
    <string name="rank_update_time">最近更新于：</string>

</resources>
