<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    tools:context=".game.role.NewRoleActivity">

    <ScrollView
        android:id="@+id/new_role_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">

                <com.tssss.bysj.componet.GTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="72dp"
                    android:gravity="left"
                    android:text="@string/new_role_head_img"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"
                    tools:ignore="RtlHardcoded,SpUsage" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/new_role_add_avatar"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="72dp"
                android:background="@null"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:src="@drawable/ic_btn_add_avatar"
                tools:ignore="ContentDescription">

            </ImageButton>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <com.tssss.bysj.componet.GTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="72dp"
                    android:gravity="left"
                    android:text="@string/new_role_input_name"
                    android:textColor="@color/blue_86a1d1"
                    android:textSize="20sp"
                    tools:ignore="RtlHardcoded,SpUsage" />

                <EditText
                    android:id="@+id/new_role_input_nick_name"
                    style="@style/GEditTextNoBg"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bg_input_blue"
                    android:hint="@string/input_hint"
                    android:inputType="text"
                    android:textColor="#4A5D80"
                    tools:ignore="Autofill,RtlSymmetry" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <com.tssss.bysj.componet.GTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="72dp"
                    android:gravity="left"
                    android:text="@string/new_role_sex"
                    android:textColor="#009688"
                    android:textSize="20sp"
                    tools:ignore="RtlHardcoded,SpUsage" />

                <LinearLayout
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <com.tssss.bysj.componet.GTextView
                        android:id="@+id/new_role_sex_man"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="72dp"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1"
                        android:background="@drawable/sex_man"
                        android:gravity="center"
                        android:text="@string/sex_man"
                        android:textColor="@color/white_ffffff"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:ignore="SpUsage" />

                    <com.tssss.bysj.componet.GTextView
                        android:id="@+id/new_role_sex_woman"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="72dp"
                        android:layout_weight="1"
                        android:background="@drawable/sex_woman"
                        android:gravity="center"
                        android:text="@string/sex_woman"
                        android:textColor="@color/white_ffffff"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:ignore="SpUsage" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <com.tssss.bysj.componet.GTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="72dp"
                    android:gravity="left"
                    android:text="@string/new_role_tag"
                    android:textColor="#FF5722"
                    android:textSize="20sp"
                    tools:ignore="RtlHardcoded,SpUsage" />

                <EditText
                    android:id="@+id/new_role_input_signature"
                    style="@style/GEditTextNoBg"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bg_input_orig"
                    android:hint="@string/input_hint"
                    android:inputType="text"
                    android:paddingStart="32dp"
                    android:textColor="#FF5722"
                    tools:ignore="Autofill,RtlSymmetry" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/new_role_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:background="@null"
                android:src="@drawable/ic_btn_create_role"
                tools:ignore="ContentDescription" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>
